# kubernetes-crd

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  README.md  build.yaml  ci.bash  controller.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  release.yaml
examples/: basic-env-vars.yaml  basic.yaml  custom-docker-image.yaml  run-from-url.yaml
manifests/base/: kustomization.yaml
manifests/base/common/: configmap.yaml  crd.yaml  deployment.yaml  kustomization.yaml  ns.yaml  serviceaccount.yaml
manifests/base/rbac/: clusterrole.yaml  kustomization.yaml  role.yaml
manifests/base/sec/net/: kustomization.yaml  policy.yaml
manifests/base/sec/pod/: kustomization.yaml  policy.yaml
manifests/overlays/generic/: kustomization.yaml
manifests/overlays/generic-rbac/: kustomization.yaml
manifests/overlays/generic-rbac-podsec/: kustomization.yaml
manifests/overlays/generic-rbac-podsec-netsec/: kustomization.yaml  ns.yaml
tests/: conftest.py  test_crd.py
tests/fixtures/basic/: spec.yaml
